--- a/resources/config/mimetypemapping.dist.json
+++ b/resources/config/mimetypemapping.dist.json
@@ -173,6 +173,7 @@
 	"rar": ["application/x-rar-compressed"],
 	"reveal": ["text/reveal"],
 	"rss": ["application/rss+xml"],
+	"rst": ["text/x-rst"],
 	"rtf": ["text/rtf"],
 	"rw2": ["image/x-dcraw"],
 	"schema": ["text/plain"],
