--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "cancelable-promise": "^4.3.1",
     "clipboard": "^2.0.11",
     "core-js": "^3.35.1",
-    "davclient.js": "github:owncloud/davclient.js.git#0.2.1",
+    "davclient.js": "github:nextcloud-deps/davclient.js.git#46dd123e3ace6e1348e5c7a45cad241365c0f2ea",
     "debounce": "^1.2.1",
     "dompurify": "^3.0.6",
     "escape-html": "^1.0.3",
